welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
    if (die2==6){die2 = 1} else {die2=die2+ 1}
                      ^withoutDoubles:3: error: reassignment to val
    if (die2==6){die2 = 1} else {die2=die2+ 1}
                                     ^