welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles && die1==die2){
    if (die2==6){die2 = 1} else {die2=die2+ 1}
    return die1+die2
  } else {return die1+die2}}